--- a/src/layouts/css/prism-okaidia.css
+++ b/src/layouts/css/prism-okaidia.css
@@ -4,6 +4,50 @@
  * original author: ocodia
  */
 
+ @font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Light.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Light.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Light.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Light.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Regular.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Regular.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Regular.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Regular.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Medium.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Medium.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Medium.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Medium.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Bold.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Bold.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Bold.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Bold.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+    
 .gatsby-highlight {
     padding-bottom: 30px;
 }
@@ -12,7 +56,8 @@ code[class*="language-"],
 pre[class*="language-"] {
     color: #f8f8f2;
     background: none;
-    font-family: 'Space Mono', monospace;
+    font-family: 'Fira Code', monospace;
+    font-variant-ligatures: contextual !important;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
@@ -27,6 +72,11 @@ pre[class*="language-"] {
     -ms-hyphens: none;
     hyphens: none;
     box-shadow: 0.05555555555555555rem 0.05555555555555555rem 1.1111111111111112rem rgba(20,20,20,0.37);
+}
+
+code {
+    font-family: 'Fira Code', monospace;
+    font-variant-ligatures: contextual !important;
 }
 
 /* Code blocks */
