--- a/src/templates/b16-tomorrow-dark.css
+++ b/src/templates/b16-tomorrow-dark.css
@@ -1,6 +1,49 @@
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Light.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Light.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Light.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Light.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Regular.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Regular.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Regular.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Regular.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Medium.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Medium.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Medium.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Medium.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face{
+    font-family: 'Fira Code';
+    src: url('/fonts/firacode/eot/FiraCode-Bold.eot');
+    src: url('/fonts/firacode/eot/FiraCode-Bold.eot') format('embedded-opentype'),
+         url('/fonts/firacode/woff2/FiraCode-Bold.woff2') format('woff2'),
+         url('/fonts/firacode/woff/FiraCode-Bold.woff') format('woff'),
+         url('/fonts/firacode/ttf/FiraCode-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
 code[class*="language-"],
-pre[class*="language-"] {
-    font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+pre[class*="language-"] {    
     font-size: 14px;
     line-height: 1.375;
     direction: ltr;
@@ -17,6 +60,11 @@ pre[class*="language-"] {
     hyphens: none;
     background: #1d1f21;
     color: #c5c8c6;
+}
+
+code {
+    font-family: 'Fira Code', monospace;
+    font-variant-ligatures: contextual !important;    
 }
 
 pre[class*="language-"]::-moz-selection,
