--- a/src/layouts/css/prism-okaidia.css
+++ b/src/layouts/css/prism-okaidia.css
@@ -86,7 +86,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-    background: #1D1F27;
+    background: #111836;
 }
 
 /* Inline code */
