--- a/src/layouts/css/prism-okaidia.css
+++ b/src/layouts/css/prism-okaidia.css
@@ -57,6 +57,7 @@ pre[class*="language-"] {
     color: #f8f8f2;
     background: none;
     font-family: 'Fira Code', monospace;
+    font-size: 1.15rem;
     font-feature-settings: "liga", "clig";
     -moz-font-feature-settings: "liga", "clig";
     -ms-font-feature-settings: "liga", "clig";
